[tool.poetry]
name = "biosignal-processing"
version = "0.1.0"
description = ""
authors = ["fukui yuto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "1.9.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
